z-index fix

--- a/static/wordstyle.css
+++ b/static/wordstyle.css
@@ -77,7 +77,7 @@ footer a {
   border: solid slategray 2px;
   background-color: white;
   overflow-y: scroll;
-  z-index: 1;
+  z-index: 3;
 }
 .modal-content {
   margin: auto;
